full-moon/tests/roblox_cases/fail/tokenizer/unfinished-string-interpolation-with-new-line/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/tokenizer/unfinished-string-interpolation-with-new-line
---
error[tokenizer]: unclosed string (1:11 to 1:14)
  ┌─ source.lua:1:11
  │
1 │ local x = `ab
  │           ^^^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:3
  │
2 │ cd`
  │   ^

error[tokenizer]: unclosed string (2:3 to 2:4)
  ┌─ source.lua:2:3
  │
2 │ cd`
  │   ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:3
  │
2 │ cd`
  │   ^


